--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ asyncio = "^4.0.0"
 aiohttp = "^3.13.2"
 uvicorn = "^0.38.0"
 python-dotenv = "^1.0.0"
+dotenv = "^0.9.9"
 
 [tool.poetry.group.dev.dependencies]
 
