--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ aiohttp = "^3.13.2"
 uvicorn = "^0.38.0"
 python-dotenv = "^1.0.0"
 dotenv = "^0.9.9"
+cachetools = "^5.3.0"
 
 [tool.poetry.group.dev.dependencies]
 
