--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,12 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# Linting/Formatting
+.ruff_cache/
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
 # Virtual Environments
 .env
 .venv
@@ -30,9 +36,6 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-
-# Poetry
-poetry.lock
 
 # PyInstaller
 *.manifest
@@ -84,6 +87,7 @@ dist-ssr
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
 .idea
 .DS_Store
 *.suo
@@ -91,6 +95,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# ESLint
+.eslintcache
 
 # Logs
 logs
