first commit for database caching, work required

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ SERIAL_NUMBER=your_serial_number_here
 
 # Optional: API Base URL (default is Octopus Energy API)
 # API_BASE_URL=https://api.octopus.energy/v1
+
+PGPASSWORD=your_master_password
