--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,7 @@ python-dotenv = "^1.0.0"
 dotenv = "^0.9.9"
 cachetools = "^5.3.0"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
-asyncpg = "^0.29.0"
-psycopg2-binary = "^2.9.9"
+psycopg = {extras = ["binary", "pool"], version = "^3.2.12"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
