--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,2 @@
-# API Configuration
-VITE_BACKEND_URL=http://localhost:8000
+# API Configuration for backend URL if you want to expose app across the network
+VITE_BACKEND_URL=http://<ip-address>:8000
