--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ag-grid-community": "^34.3.1",
+    "ag-grid-react": "^34.3.1",
     "axios": "^1.13.1",
     "plotly.js": "^2.27.0",
     "react": "^18.2.0",
